# nxp-easyevse-mpu

./: CMakeLists.txt  LICENSE  Makefile  README  SW-Content-Register.txt  evse.conf
cloud/: CMakeLists.txt  cloud.conf  cloud_app.c
common/: comms.c  logger.c  utils.c
gui/: CMakeLists.txt  gui-easyevse.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
include/: comms.h  logger.h  nfc_api.h  server.h  typedefs.h  utils.h
meter/: meter_app.c
nfc/: nfc_api.c  nfc_app.c
server/: server.c
