cmake_minimum_required(VERSION 3.14)
project(EVSE VERSION 0.1 LANGUAGES CXX C)

if("${TARGET}" STREQUAL "GUI")
    add_subdirectory(gui)
    message("GUI project added")
elseif("${TARGET}" STREQUAL "CLOUD")
    add_subdirectory(cloud)
    message("CLOUD project added")
elseif("${TARGET}" STREQUAL "ALL")
    add_subdirectory(gui)
    add_subdirectory(cloud)
    message("GUI & CLOUD projects added")
endif()